<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<!--Текстовое поле (вывод обратных данныхот Arduino), использовался при отладке-->
    <TextView									
        android:id="@+id/txtArduino"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="" />
<!-- Кнопка -->
    <Button											
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnForward"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/btn_STOP" />
<!-- Кнопка вправо -->
    
    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStop"
        android:layout_alignBottom="@+id/btnStop"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:text="@string/btn_RIGHT" />
<!-- Кнопка влево -->
    
    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStop"
        android:layout_alignBottom="@+id/btnStop"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:text="@string/btn_LEFT" />
<!-- Кнопка назад -->
    
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/btn_BACK" />
<!-- Кнопка выход -->
    
    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_EXIT" />
<!-- Кнопка вперед -->
    
    <Button
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/btn_FORWARD" />

</RelativeLayout>

